--- a/mods/gra/rules/civilian.yaml
+++ b/mods/gra/rules/civilian.yaml
@@ -151,15 +151,15 @@ HOSP:
     Armor:
 		Type: Heavy
 	RevealsShroud:
-		Range: 7c0
+		Range: 5c0
 		RevealGeneratedShroud: False
 	RevealsShroud@GAPGEN:
 		Range: 5c0
     CaptureManager:
     ProximityCapturable:
-        Range: 3c0
+        Range: 1c0
         CaptorTypes: Infantry
-        MustBeClear: False
+        MustBeClear: True
         Sticky: True
         Permanent: False
     Cargo:
@@ -185,15 +185,15 @@ HOSP:
     Armor:
 		Type: Heavy
 	RevealsShroud:
-		Range: 7c0
+		Range: 5c0
 		RevealGeneratedShroud: False
 	RevealsShroud@GAPGEN:
 		Range: 5c0
     CaptureManager:
     ProximityCapturable:
-        Range: 3c0
+        Range: 1c0
         CaptorTypes: Infantry
-        MustBeClear: False
+        MustBeClear: True
         Sticky: True
         Permanent: False
     Cargo:
